fix(builder): preserve insertion order in SynthesisMethodFilter.parse
parse()가 LinkedHashSet으로 삽입 순서를 유지하다가 Set.copyOf(out)으로
감싸면서 순서를 잃었다. JDK ImmutableCollections는 JVM 인스턴스마다 랜덤
SALT로 iteration 순서가 바뀌어, 순서 민감한 containsExactly 단언
(SynthesisMethodFilterTest.parse_commaSeparatedFqnEntries/parse_dotWildcardSyntax)
이 CI JVM에서 비결정적으로 실패했다(로컬에선 우연히 통과).

Collections.unmodifiableSet(LinkedHashSet)으로 삽입 순서를 보존한다.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>